update for reviewing

--- a/css/style.css
+++ b/css/style.css
@@ -40,15 +40,27 @@ html, body, #map-canvas {
     border-radius: 0 0 2px 2px;
     font-size: 15px;
     overflow: hidden;
+    margin-top: 50px;
+}
+.favourite-item-container-extra {
+
+}
+.humberger{
+    padding: 12px 16px;
+    position: absolute;
+    outline: none;
 }
 
+.humberger-search{
+
+}
 #pac-input {
-    background-color: #fff;
     font-family: Roboto;
     font-size: 18px;
     font-weight: 300;
+    position: absolute;
     width: 100%;
-    padding: 0 11px 0 13px;
+    padding: 0 11px 0 53px;
     text-overflow: ellipsis;
 
 }
@@ -89,8 +101,26 @@ html, body, #map-canvas {
 
 /* responsive for Tablet version */
 @media screen and (min-width: 769px) {
+    .favourite-item-container-responsive-hide{
+        display: none;
+    }
+    .favourite-item-container-responsive-show{
+        display: block;
+    }
+    .favourite-item-container-responsive{
+        display: block;
+    }
 }
 
 /* responsive for Mobile version */
 @media screen and (max-width: 768px) {
+    .favourite-item-container-responsive-hide{
+        display: none;
+    }
+    .favourite-item-container-responsive-show{
+        display: block;
+    }
+    .favourite-item-container-responsive{
+        display: none;
+    }
 }
